# travel-order-resolver

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: __init__.py  main.py
backend/app/: main.py
backend/app/api/v1/: transcription.py  travel.py  user.py
backend/app/core/: config.py
backend/app/db/: schema.py
backend/app/models/: journey.py  transcription.py  travel.py
backend/app/services/: geolocation.py  navitia_service.py  station_matcher.py  time_normalizer.py  transcription_service.py  travel_service.py  user_service.py
backend/tests/: test_db.py
backend/tests/api/v1/: test_user.py
base/: __init__.py
base/data/: .gitkeep
base/data/processed/: .gitkeep  entries.csv  stations.csv  travel-order-dataset.json
base/data/raw/: .gitkeep  liste-des-gares.csv
base/models/: .gitkeep
base/notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  03_evaluation.ipynb  ner.ipynb
base/notebooks/data_processing/: cities_processing.ipynb  data_processing.ipynb  dateparser_expression.ipynb  stations_processing.ipynb  thefuzz.ipynb
base/src/: __init__.py  inference.py  preprocessing.py  training.py
base/src/ner/: custom-models-ner.py  generate-dataset.py  pre-trained-ner.py  train_data.json  utils.py
frontend/: __init__.py  api.py  app.py
frontend/.streamlit/: config.toml
frontend/components/: ItineraryCard.py
frontend/models/: __init__.py  journey.py  station.py  travel.py
frontend/pages/: home.py  itinerary.py  test.py
