[project]
name = "travel-order-resolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "poethepoet>=0.40.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
    "scikit-learn>=1.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "spacy>=3.8.11",
    "pip>=25.3",
    "faker>=40.1.0",
    "matplotlib>=3.10.8",
    "faster-whisper>=1.2.1",
    "nltk>=3.9.2",
    "python-multipart>=0.0.21",
    "st-annotated-text>=4.0.2",
    "streamlit-vertical-slider>=2.5.5",
    "streamlit-toggle-switch>=1.0.2",
    "dateparser>=1.2.2",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.27.3",
    "streamlit-geolocation>=0.0.10",
    "streamlit-js-eval>=1.0.0",
    "folium>=0.18.0",
    "streamlit-folium>=0.23.0",
    "googlemaps>=4.10.0",
    "polyline>=2.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.poe.tasks]
install = "uv sync --locked"
api = "uv run uvicorn backend.app.main:app --reload --host 0.0.0.0 --port 8000"
front = "uv run streamlit run frontend/app.py"
jupyter = "uv run --with jupyter jupyter lab"
dev.shell = "uv run poe api & uv run poe front & uv run poe jupyter"
test = "uv run pytest -v"
